<resources>
    <string name="app_name">StudyBuddy</string>
    <string name="add_subject">Add Subject</string>
    <string name="record_bunk">Record Bunk</string>
    <string name="subject_report">Subject Report</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="bunk_tracker">BUNK\nTRACKER</string>
    <string name="toolbar">toolbar</string>
    <string name="toolbartitle">Add Subject</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in_to_your_account">Log in to StudyBuddy</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
</resources>