<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:gravity="center">
    <ImageView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="start|center"
        android:padding="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_to_your_account"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:drawableEnd="@drawable/person"
            android:background="@drawable/edit_text_bg"
            android:elevation="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:padding="10dp"
            android:drawableEnd="@drawable/lock"
            android:background="@drawable/edit_text_bg"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:padding="10dp"
            android:layout_gravity="end"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="start|center">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:layout_gravity="center"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                app:backgroundTint="@null"
                android:background="@drawable/login_button" />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/primaryColor"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textSize="15sp"
                android:textColor="@color/grey" />
            <TextView
                android:id="@+id/login_to_signup_intent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Register"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>